# ehrmantraut

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  go  pyproject.toml
.circleci/: config.yml
.mlflow/2/: meta.yaml
.mlflow/2/01c27b1381e547f8b629bd8945b512f0/: meta.yaml
.mlflow/2/03546ce46a4c4018bf134c3f52b9205b/: meta.yaml
.mlflow/2/2e7de1e246734eb6ad75ed4fec59a3cd/: meta.yaml
.mlflow/2/6ad5a7f302cd41bb9ee5b5cac0de648a/: meta.yaml
infrastructure/: Makefile  application-on-ec2.yaml  bastion-host.yaml  ehrmantraut-on-ec2.yaml  ehrmantraut-on-ecr.yaml  ehrmantraut-on-fargate.yaml  fargate-cluster.yaml
