[tool.poetry]
name = "ehrmantraut"
version = "0.1.0"
description = "Experiment tracking service"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.2"
scipy = "^1.8.0"
mlflow = "^1.24.0"
boto3 = "^1.21.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
