[tool.poetry]
name = "ehrmantraut"
version = "0.1.0"
description = "Experiment tracking service"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
